--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -225,7 +225,17 @@
 }
 
 .navHovering {
-  padding-bottom: 12px;
+  position: relative;
+}
+
+.navHovering::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 12px;
+  background: transparent;
 }
 
 .dropdownPanel {
